<!--
  ~ /*
  ~  *
  ~  *  * MIT License
  ~  *  *
  ~  *  * Copyright (c) 2020 Spikey Sanju
  ~  *  *
  ~  *  * Permission is hereby granted, free of charge, to any person obtaining a copy
  ~  *  * of this software and associated documentation files (the "Software"), to deal
  ~  *  * in the Software without restriction, including without limitation the rights
  ~  *  * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~  *  * copies of the Software, and to permit persons to whom the Software is
  ~  *  * furnished to do so, subject to the following conditions:
  ~  *  *
  ~  *  * The above copyright notice and this permission notice shall be included in all
  ~  *  * copies or substantial portions of the Software.
  ~  *  *
  ~  *  * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~  *  * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~  *  * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~  *  * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~  *  * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~  *  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~  *  * SOFTWARE.
  ~  *
  ~  */
  ~
  -->

<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Nottz App</string>

    <string name="title_hint">Title</string>
    <string name="desc_hint" tools:ignore="TypographyEllipsis">Type something...</string>
    <string name="save_notes_btn">Save notes</string>
    <string name="desc_text">This is demo test</string>
    <string name="empty_title_msg">Your title is empty</string>
    <string name="empty_desc_msg">Your description is empty</string>
    <string name="note_saved_msg">Note saved successfully</string>
    <string name="note_updated_msg">Note updated successfully!</string>
    <string name="note_deleted_msg">Successfully deleted notes</string>
    <string name="undo">Undo</string>

    <!-- Details menu -->
    <string name="text_share">Share</string>
    <string name="text_delete">Delete</string>

    <!-- Share notes -->
    <string name="share_message">\"%s\"\n\n Note: %s. \n\nVisit: https://github.com/TheCodeMonks/Notzz-App</string>
    <string name="text_no_notes">No Notes Found!</string>
    <string name="text_empty_state_description">There are no notes here. Try adding few notes</string>
    <string name="text_ui_mode">UI mode</string>
    <string name="menu_about">About</string>

    <!-- About us -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_about_license_title"><![CDATA[Attributions & License]]></string>
    <string name="text_about_license">Licensed Under MIT License</string>
    <string name="text_about_visit_title">Visit</string>
    <string name="text_about_visit_url"><u>https://github.com/TheCodeMonks/Notzz-App</u></string>
    <string name="text_app_version">v%s (%d)</string>

</resources>
