<?xml version="1.0" encoding="utf-8"?><!--
  ~ /*
  ~  *
  ~  *  * MIT License
  ~  *  *
  ~  *  * Copyright (c) 2020 Spikey Sanju
  ~  *  *
  ~  *  * Permission is hereby granted, free of charge, to any person obtaining a copy
  ~  *  * of this software and associated documentation files (the "Software"), to deal
  ~  *  * in the Software without restriction, including without limitation the rights
  ~  *  * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~  *  * copies of the Software, and to permit persons to whom the Software is
  ~  *  * furnished to do so, subject to the following conditions:
  ~  *  *
  ~  *  * The above copyright notice and this permission notice shall be included in all
  ~  *  * copies or substantial portions of the Software.
  ~  *  *
  ~  *  * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~  *  * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~  *  * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~  *  * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~  *  * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~  *  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~  *  * SOFTWARE.
  ~  *
  ~  */
  ~
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.about.AboutFragment">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="@dimen/dimen_64"
        android:contentDescription="@string/app_name"
        android:src="@drawable/nottzlogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_12"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />


    <TextView
        android:id="@+id/appVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_12"
        android:fontFamily="@font/montserrat"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appName" />


    <TextView
        android:id="@+id/licenseTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16"
        android:layout_marginTop="@dimen/dimen_48"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/text_about_license_title"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appVersion" />


    <TextView
        android:id="@+id/license"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16"
        android:layout_marginTop="@dimen/dimen_12"
        android:fontFamily="@font/montserrat"
        android:text="@string/text_about_license"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/licenseTitle" />


    <TextView
        android:id="@+id/visitTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16"
        android:layout_marginTop="@dimen/dimen_32"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/text_about_visit_title"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/license" />


    <TextView
        android:id="@+id/visitURL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16"
        android:layout_marginTop="@dimen/dimen_12"
        android:fontFamily="@font/montserrat"
        android:text="@string/text_about_visit_url"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        android:textColor="@color/blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/visitTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>
