<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/colorPrimary"
    tools:context=".ui.add.AddNotesFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_notes_title_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@null"
            android:cursorVisible="true"
            android:ems="10"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="start"
            android:hint="@string/title_hint"
            android:inputType="textCapSentences|textMultiLine"
            android:maxLength="60"
            android:maxLines="3"
            android:padding="10dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
            android:textColor="@android:color/white"
            android:textColorHint="@color/hint_color"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/edit_notes_desc_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/edit_notes_title_et"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="80dp"
            android:background="@null"
            android:cursorVisible="true"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:gravity="start"
            android:hint="@string/desc_hint"
            android:inputType="textCapSentences|textMultiLine"
            android:minLines="10"
            android:overScrollMode="always"
            android:padding="10dp"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textColor="@android:color/white"
            android:textColorHint="@color/hint_color"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/update_btn_save_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/save_notes_btn"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:textColor="@color/colorPrimary" />

    </RelativeLayout>

</ScrollView>