<?xml version="1.0" encoding="utf-8"?><!--
  ~ /*
  ~  *
  ~  *  * MIT License
  ~  *  *
  ~  *  * Copyright (c) 2020 Spikey Sanju
  ~  *  *
  ~  *  * Permission is hereby granted, free of charge, to any person obtaining a copy
  ~  *  * of this software and associated documentation files (the "Software"), to deal
  ~  *  * in the Software without restriction, including without limitation the rights
  ~  *  * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~  *  * copies of the Software, and to permit persons to whom the Software is
  ~  *  * furnished to do so, subject to the following conditions:
  ~  *  *
  ~  *  * The above copyright notice and this permission notice shall be included in all
  ~  *  * copies or substantial portions of the Software.
  ~  *  *
  ~  *  * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~  *  * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~  *  * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~  *  * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~  *  * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~  *  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~  *  * SOFTWARE.
  ~  *
  ~  */
  ~
  -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/noteDetailRootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/noteDetailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_watermark"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/titleET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_16"
            android:layout_marginTop="@dimen/dimen_16"
            android:layout_marginEnd="@dimen/dimen_16"
            android:background="@null"
            android:cursorVisible="true"
            android:ems="10"
            android:fontFamily="@font/work_sans_bold"
            android:gravity="start"
            android:hint="@string/title_hint"
            android:inputType="textCapSentences|textMultiLine"
            android:maxLength="60"
            android:maxLines="3"
            android:padding="@dimen/dimen_12"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
            android:textColor="@color/title_text_color"
            android:textColorHint="@color/hint_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo"
            tools:ignore="Autofill" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/noteET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_16"
            android:layout_marginTop="@dimen/dimen_16"
            android:layout_marginEnd="@dimen/dimen_16"
            android:background="@null"
            android:fontFamily="@font/work_sans"
            android:gravity="start"
            android:hint="@string/desc_hint"
            android:lineSpacingExtra="5dp"
            android:padding="@dimen/dimen_12"
            android:paddingBottom="@dimen/dimen_64"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleET" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
